<resources>
    <string name="app_name">Sales Tracker</string>
    <string name="search">Search</string>
    <string name="view_purchase_history">View Purchase History</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_by_number">Search by number</string>
    <string name="delete_entries_option">Delete entries</string>
    <string name="delete_entries_title">Delete Entries</string>
    <string name="delete_entries">Are you sure you want to delete all entries</string>
    <string name="delete_entry_title">Delete Entry</string>
    <string name="delete_entry">Are you sure you want to delete this entry?</string>
    <string name="entries_deleted_toast_message">entry(ies) deleted.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="paid">Paid</string>
    <string name="pending">Pending</string>
    <string name="add_transaction_label">Add Transaction</string>
    <string name="edit_transaction_label">Edit Transaction</string>
    <string name="id_hint">Input name (else phone)</string>
    <string name="phone_hint">Input phone number</string>
    <string name="title_hint">Select title</string>
    <string name="database_insert_error_message">Error inserting into database!</string>
    <string name="database_insert_success_message">Entry made successfully!</string>
    <string name="customer">Customer</string>
    <string name="service_provider">Service provider</string>
    <string name="unit_hint">Input unit</string>
    <string name="cost_hint">Input cost</string>
    <string name="payment_hint">Select payment state</string>
    <string name="description_hint">Add comments about transaction</string>
    <string name="empty_list_text">No entry made yet!</string>
    <string name="empty_list_subtext">Click on the button at the base to add an entry.</string>
    <string name="id">id</string>
    <string name="created_updated">Created/Updated: </string>
    <string name="created">Created: </string>
    <string name="tv_id">Customers ID: </string>
    <string name="tv_phone">Phone: </string>
    <string name="tv_title">Title: </string>
    <string name="tv_unit">Unit: </string>
    <string name="tv_cost">Cost: </string>
    <string name="tv_payment_state">Payment: </string>
    <string name="tv_description">Comments: </string>
    <string name="details_activity_label">Details</string>
    <string name="empty_name_error_message">Name field cannot be empty!</string>
    <string name="empty_phone_error_message">Phone field should not be empty!</string>
    <string name="empty_unit_error_message">Unit field cannot be empty!</string>'
    <string name="wrong_input_type_error_message">Please ensure value inputs for both phone and cost fields!</string>
    <string name="wrong_phone_input_error_message">Please enter a valid phone number in the phone field</string>
    <string name="empty_cost_field_error_message">Cost field cannot be empty</string>
    <string name="wrong_cost_input_error_message">Cost field requires an integer input.</string>
    <string name="transaction_successful_comment">Transaction Successful.</string>
    <string name="bought">Bought</string>
    <string name="yet_to_pay">and is yet to pay.</string>
    <string name="has_paid">and has paid</string>
    <string name="seller_bought">You bought</string>
    <string name="seller_has_paid">and have paid</string>
    <string name="seller_yet_to_pay">and are yet to pay</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>
