<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.datasellertransactionstracker.AddTransactionActivity"
    android:background="@color/details_activity_background">

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:maxLines="1"
        android:fontFamily="serif-monospace"
        style="@style/Widget.AppCompat.EditText"
        android:hint="@string/id_hint"
        android:inputType="textCapWords"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/ed_phone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:maxLines="1"
        android:fontFamily="serif-monospace"
        style="@style/Widget.AppCompat.EditText"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="phone"
        android:hint="@string/phone_hint"
        android:textSize="22sp"/>

    <Spinner
        android:id="@+id/title_spinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="viewStart"
        android:fontFamily="serif-monospace"
        android:spinnerMode="dropdown"
        android:gravity="start" />

    <EditText
        android:id="@+id/ed_unit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:maxLines="1"
        android:fontFamily="serif-monospace"
        style="@style/Widget.AppCompat.EditText"
        android:hint="@string/unit_hint"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/ed_cost"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:maxLines="1"
        android:fontFamily="serif-monospace"
        style="@style/Widget.AppCompat.EditText"
        android:hint="@string/cost_hint"
        android:inputType="number"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="22sp"/>

    <Spinner
        android:id="@+id/payment_state_spinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:fontFamily="serif-monospace"
        android:spinnerMode="dropdown"
        android:textAlignment="viewStart"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="start"/>

    <EditText
        android:id="@+id/ed_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:textSize="22sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="serif-monospace"
        style="@style/Widget.AppCompat.EditText"
        android:hint="@string/description_hint"
        android:textAlignment="viewStart"
        android:gravity="start" />
</LinearLayout>
