<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.datasellertransactionstracker.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|start"
                android:layout_weight="2"
                android:textSize="20sp"
                android:text="@string/tv_id"/>
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|start"
                android:layout_weight="4"
                android:text=""
                android:textSize="22sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|start"
                android:layout_weight="2"
                android:textSize="20sp"
                android:text="@string/tv_phone"/>
            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text=""
                android:textSize="22sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|start"
                android:layout_weight="2"
                android:textSize="20sp"
                android:text="@string/tv_title"/>
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text=""
                android:textSize="22sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|start"
                android:layout_weight="2"
                android:textSize="20sp"
                android:text="@string/tv_unit"/>
            <TextView
                android:id="@+id/tv_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text=""
                android:textSize="22sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|start"
                android:layout_weight="2"
                android:textSize="20sp"
                android:text="@string/tv_cost"/>
            <TextView
                android:id="@+id/tv_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text=""
                android:textSize="22sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|start"
                android:layout_weight="2"
                android:textSize="20sp"
                android:text="@string/tv_payment_state"/>
            <TextView
                android:id="@+id/tv_payment_state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text=""
                android:textSize="22sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_weight="2"
                android:textSize="20sp"
                android:text="@string/tv_description"/>
            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text=""
                android:textSize="22sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
